--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.24)
-project(cubesat)
+project(cpuid)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(binar.exe binar.cpp bitmapRW.cpp bitmapRW.h)
-add_executable(median.exe median.cpp bitmapRW.cpp bitmapRW.h)
+add_executable(cpuid main.cpp cpuinfo.cpp cpuinfo.h)
